--- a/src/app/modules/categories/categories.component.html
+++ b/src/app/modules/categories/categories.component.html
@@ -1,1 +1,23 @@
-<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover"></table>
+<app-content-header title="Quản lý danh mục" subtitle="Categories"></app-content-header>
+<div class="container">
+  <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Active</th>
+      <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let item of categories">
+      <td>{{ item.id }}</td>
+      <td>{{ item.name }}</td>
+      <td>{{ item.active }}</td>
+      <td>
+        Action
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
